@@ -13,6 +13,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 
 = CSS =
 * Complete refactoring of the styles for better responsiveness
+* Fixed white space on right side of iPhone displays
 * Monster be gone! - Fixed special case many level menu in sidebar
 
 == Version 1.2.4 ==
